@@ -2,7 +2,6 @@
 java \
 -XX:+UnlockExperimentalVMOptions \
 -XX:+UseCGroupMemoryLimitForHeap \
--XX:+UseCGroupMemoryLimitForHeap \
--XX:MaxRAMFraction=1 \
+-XX:MaxRAMFraction=2 \
 -XshowSettings:vm \
 $* -jar judge-d.jar
